# helmscope

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
helmscope/: cli.py  config.py
helmscope/helm/: models.py  reader.py
helmscope/k8s/: client.py  pods.py
templates/: report.html.j2
tests/fixtures/: make_fixture.py
tests/unit/: test_cli.py  test_client.py  test_config.py  test_helm_models.py  test_helm_reader.py  test_placeholder.py  test_pods.py
